--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
-title: hello, world
-author: me
-description: this is a testing site
+title: 404 Expertise Not Found
+author: Marcus Lim (@sucrameht)
+description: Learning how to code
